<resources>
    <string name="app_name">Fitness_app</string>
    <string name="schritte">Schritte</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="_0000_kal">0 Kal</string>
    <string name="_0000_m">0 m</string>
    <string name="switchStart">Start</string>
    <string name="switchStop">Stop</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Stopwatch -->

    <string name="Colon">:</string>
    <string name="starten">Start</string>
    <!-- Example General settings -->
    <string name="pref_header_general">Schrittlänge &amp; Cal pro km</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">example_name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">test</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>

    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />


    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Einstellungen</string>
    <string name="Schritt_menu">Schritt</string>

    <string name="todo">TODO</string>
    <string name="setDisplayDif">0</string>


    <string name="time_string">Time: %1$s </string>

    <string name="stop">Stop</string>


    <string name="save_lap">Save Lap</string>

    <string name="pause">Pause</string>

    <string name="_00_00_00">00:00:00</string>

    <string name="doppelPunkt">:</string>

    <string name="nullpunkt">00:00:00</string>

</resources>
